--- a/angular-client/src/app/components/chat-box/chat-box.component.css
+++ b/angular-client/src/app/components/chat-box/chat-box.component.css
@@ -3,6 +3,10 @@
     color: aliceblue;
 }
 
+.createdAt {
+    color: rgba(255,255,255,.5);
+}
+
 .input {
     width: 100%;
 }
@@ -15,3 +19,21 @@
 .material-icons:hover {
     cursor: pointer;
 }
+
+table {
+    width: 100%;
+    background-color: #212529;
+}
+  
+.mat-cell {
+    color: aliceblue;
+    font-size: 13px;
+    border-bottom-style: none;
+}
+  
+/* get rid of padding left for the table */
+th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, td.mat-cell:last-of-type {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+  
