--- a/angular-client/src/app/components/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/chat-box/chat-box.component.html
@@ -1,3 +1,17 @@
+<table mat-table [dataSource]="messages" class="mat-elevation-z0">
+
+    <ng-container matColumnDef="message">
+      <td mat-cell *matCellDef="let element">
+        <mat-form-field class="input">
+            <mat-label>MintOwl</mat-label>
+            <textarea [value]="element.content" disabled cdkTextareaAutosize matInput maxlength="250"></textarea>
+            <mat-hint class="createdAt" align="end">5:47pm</mat-hint>
+        </mat-form-field>
+      </td>
+    </ng-container>
+    <tr mat-row *matRowDef="let row; columns: messagesDisplayedColumns;"></tr>
+</table>
+
 <mat-form-field class="input">
     <mat-label>Chat</mat-label>
     <textarea [(ngModel)]="newMessage" (keydown.enter)="sendMessage($event)" cdkTextareaAutosize matInput maxlength="250" #input></textarea>
