Got rid of ugly remove button

--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -8,6 +8,6 @@ class="mat-elevation-z0" border
         {{friend.username}}
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
-        <app-chat-box [host]="host" [friend]="friend" ></app-chat-box>
+        <app-chat-box [host]="host" [friend]="friend" (remove)="removeFriend()"></app-chat-box>
     </ng-template>
 </mat-expansion-panel>
