--- a/angular-client/src/app/components/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/chat-box/chat-box.component.html
@@ -18,3 +18,4 @@
     <mat-hint class="hint" align="end">{{input.value.length || 0}}/250</mat-hint>
 </mat-form-field>
 <span matTooltip="Send Message" matTooltipPosition="right" (click)="sendMessage()" class="material-icons">send</span>
+<span matTooltip="Remove Friend" matTooltipPosition="right" (click)="removeFriend()" class="material-icons">close</span>
