--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -49,7 +49,7 @@
         <table mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element"> 
-                    <app-social-cell [host]="host" [friend]="element"></app-social-cell>
+                    <app-social-cell [host]="host" [friend]="element" (remove)="removeFriend(element)"></app-social-cell>
                 </td>
             </ng-container>
 
@@ -70,7 +70,7 @@
         <table mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element"> 
-                    <app-social-cell [host]="host" [friend]="element"></app-social-cell>
+                    <app-social-cell [host]="host" [friend]="element" (remove)="removeFriend(element)"></app-social-cell>
                 </td>
             </ng-container>
 
