--- a/angular-client/src/app/components/social-cell/social-cell.component.css
+++ b/angular-client/src/app/components/social-cell/social-cell.component.css
@@ -7,7 +7,12 @@
     padding: 0px;
     padding-right: 7px;
 }
-  
+
+.mat-expansion-panel-header-description {
+    flex-grow: 0;
+    color: rgb(204, 33, 33)
+}
+
 ::ng-deep .mat-expansion-panel-body {
     padding: 0px !important;
     padding-bottom: 7px !important;
