--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -28,13 +28,13 @@
 
             <ng-container matColumnDef="reject">
                 <td mat-cell *matCellDef="let element">
-                    <span (click)="rejectFriendRequest(element)" class="material-icons">close</span>
+                    <span matTooltip="Reject Friend Request" (click)="rejectFriendRequest(element)" class="material-icons">person_remove</span>
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="accept">
                 <td mat-cell *matCellDef="let element">
-                    <span (click)="acceptFriendRequest(element)" class="material-icons">done</span>
+                    <span matTooltip="Accept Friend Request" (click)="acceptFriendRequest(element)" class="material-icons">person_add_alt</span>
                 </td>
             </ng-container>
         
