--- a/angular-client/src/app/components/chat-box/chat-box.component.css
+++ b/angular-client/src/app/components/chat-box/chat-box.component.css
@@ -24,6 +24,12 @@ table {
     width: 100%;
     background-color: #212529;
 }
+
+.scrollable {
+    height: 200px;
+    max-width: 100%;
+    overflow: auto;
+}
   
 .mat-cell {
     color: aliceblue;
@@ -36,4 +42,3 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
     padding-left: 0px;
     padding-right: 0px;
 }
-  
