--- a/angular-client/src/app/components/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/chat-box/chat-box.component.html
@@ -1,3 +1,4 @@
+<div class="scrollable" #scrollable>
 <table mat-table [dataSource]="messages" class="mat-elevation-z0">
 
     <ng-container matColumnDef="message">
@@ -11,6 +12,7 @@
     </ng-container>
     <tr mat-row *matRowDef="let row; columns: messagesDisplayedColumns;"></tr>
 </table>
+</div>
 
 <mat-form-field class="input">
     <mat-label>Chat</mat-label>
