--- a/angular-client/src/app/components/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/chat-box/chat-box.component.html
@@ -4,7 +4,7 @@
     <ng-container matColumnDef="message">
       <td mat-cell *matCellDef="let element">
         <mat-form-field class="input">
-            <mat-label>{{element.from}}</mat-label>
+            <mat-label>{{element.from?.username}}</mat-label>
             <textarea [value]="element.content" disabled cdkTextareaAutosize matInput maxlength="250"></textarea>
             <mat-hint class="createdAt" align="end">{{element.createdAt}}</mat-hint>
         </mat-form-field>
