--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -49,7 +49,7 @@
         <table mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element"> 
-                    <app-social-cell [host]="host" [friend]="element" (remove)="removeFriend(element)"></app-social-cell>
+                    <app-social-cell [host]="host" [friend]="element" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
                 </td>
             </ng-container>
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
@@ -63,7 +63,7 @@
         <table mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element"> 
-                    <app-social-cell [host]="host" [friend]="element" (remove)="removeFriend(element)"></app-social-cell>
+                    <app-social-cell [host]="host" [friend]="element" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
                 </td>
             </ng-container>
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
