--- a/angular-client/src/app/components/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/chat-box/chat-box.component.html
@@ -20,4 +20,4 @@
     <mat-hint class="hint" align="end">{{input.value.length || 0}}/250</mat-hint>
 </mat-form-field>
 <span matTooltip="Send Message" (click)="sendMessage()" class="material-icons">send</span>
-<span matTooltip="Remove Friend" (click)="removeFriend()" class="material-icons">person_remove</span>
+<span matTooltip="Remove Friend" (click)="removeFriend()" class="material-icons-outlined">person_remove</span>
