--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
@@ -20,15 +20,6 @@
   display: none;
 } */
 
-.material-icons {
-  vertical-align: middle;
-  color:#673ab7;
-}
-
-.material-icons:hover {
-  cursor: pointer;
-}
-
 table {
   width: 100%;
   background-color: #212529;
@@ -46,4 +37,8 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
 
 .right-justify {
   text-align: right;
+}
+
+.profile-icon {
+  padding-bottom: 5px;
 }
