Inputs and Outputs set up for room data

--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel  
+<mat-expansion-panel *ngIf="asyncDataPresent()"
 (opened)="onPanelOpen()" 
 (closed)="onPanelClose()" 
 class="mat-elevation-z0" border 
@@ -13,6 +13,6 @@ class="mat-elevation-z0" border
         </mat-panel-description>     
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
-        <app-chat-box [host]="host" [friend]="friend" (onRemoveFriend)="removeFriend()" (onUnviewedMessage)="unviewedMessageAlert()"></app-chat-box>
+        <app-chat-box [(host)]="host" [(hostRoom)]="hostRoom" [(onlineFriendsRooms)]="onlineFriendsRooms" [(friend)]="friend" (onRemoveFriend)="removeFriend()" (onUnviewedMessage)="unviewedMessageAlert()"></app-chat-box>
     </ng-template>
 </mat-expansion-panel>
