--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="example-container" autosize>
+<mat-drawer-container *ngIf="asyncDataPresent()" class="example-container" autosize>
     <mat-drawer #drawer class="example-sidenav" mode="over">
         <h1>
             <span routerLink="/user-profile" matTooltip="Go to User Profile" class="material-icons profile-icon">account_circle</span>
@@ -45,8 +45,8 @@
  
         <table mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
-                <td mat-cell *matCellDef="let element"> 
-                    <app-social-cell [host]="host" [friend]="element" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
+                <td mat-cell *matCellDef="let element; let i = index"> 
+                    <app-social-cell [(host)]="host" [(hostRoom)]="hostRoom" [(onlineFriendsRooms)]="onlineFriendsRooms" [(friend)]="onlineFriends.data[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
                 </td>
             </ng-container>
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
@@ -59,8 +59,8 @@
 
         <table mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
-                <td mat-cell *matCellDef="let element"> 
-                    <app-social-cell [host]="host" [friend]="element" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
+                <td mat-cell *matCellDef="let element; let i = index"> 
+                    <app-social-cell [(host)]="host" [(hostRoom)]="hostRoom" [(onlineFriendsRooms)]="onlineFriendsRooms" [(friend)]="offlineFriends.data[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
                 </td>
             </ng-container>
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
