Chat working first iteration

--- a/angular-client/src/app/components/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/chat-box/chat-box.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="asyncDataPresent()">
+<div>
   <div class="scrollable" #scrollable>
   <table mat-table [dataSource]="messages" class="mat-elevation-z0">
 
