--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel *ngIf="asyncDataPresent()"
+<mat-expansion-panel
 (opened)="onPanelOpen()" 
 (closed)="onPanelClose()" 
 class="mat-elevation-z0" border 
@@ -12,5 +12,5 @@ class="mat-elevation-z0" border
             <span *ngIf="hasUnviewedMessages && !panelOpenState" class="material-icons">mail</span>
         </mat-panel-description>     
     </mat-expansion-panel-header>
-    <app-chat-box [(host)]="host" [(hostRoom)]="hostRoom" [(onlineFriendsRooms)]="onlineFriendsRooms" [(friend)]="friend" (onRemoveFriend)="removeFriend()" (onUnviewedMessage)="unviewedMessageAlert()"></app-chat-box>
+    <app-chat-box [potentialMessage]="potentialMessage" [(friend)]="friend" (onRemoveFriend)="removeFriend()" (onUnviewedMessage)="unviewedMessageAlert()"></app-chat-box>
 </mat-expansion-panel>
