--- a/angular-client/src/app/components/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/chat-box/chat-box.component.html
@@ -1,20 +1,24 @@
 <div>
   <div class="scrollable" #scrollable>
   <table mat-table [dataSource]="messages" class="mat-elevation-z0">
-
       <ng-container matColumnDef="message">
-        <td mat-cell *matCellDef="let element">
-          <mat-form-field class="input">
-              <mat-label>{{element.from?.username}}</mat-label>
-              <textarea [value]="element.content" disabled cdkTextareaAutosize matInput maxlength="250"></textarea>
-              <mat-hint class="createdAt" align="end">{{element.createdAt | date : 'short'}}</mat-hint>
-          </mat-form-field>
+        <td [style.visibility]="element.createdAt ? 'visible': 'hidden'" class="cell" mat-cell *matCellDef="let element">
+          <div *ngIf="isMessageOld(element)" class="old-message">{{element.createdAt | date : 'mediumDate'}}</div>
+          <mat-card class="card">
+            <mat-card-subtitle class="card-subtitle small-font">{{element.from?.username}} - {{element.createdAt | date : 'shortTime'}}</mat-card-subtitle>
+            <mat-card-content class="card-content">
+              <mat-list *ngFor="let paragraph of getParagraphs(element)" role="list">
+                <mat-list-item role="listitem">
+                  <div [innerHTML]=paragraph></div>
+                </mat-list-item>
+              </mat-list>
+            </mat-card-content>
+          </mat-card>
         </td>
       </ng-container>
       <tr mat-row *matRowDef="let row; columns: messagesDisplayedColumns;"></tr>
   </table>
   </div>
-
   <mat-form-field class="input">
       <mat-label>Chat</mat-label>
       <textarea [(ngModel)]="newMessage" (keydown.enter)="sendMessage($event)" cdkTextareaAutosize matInput maxlength="250" #input></textarea>
