--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -26,7 +26,7 @@
         <table mat-table [dataSource]="inboundFriendRequests" class="mat-elevation-z0">
 
             <ng-container matColumnDef="username">
-            <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
             </ng-container>
 
             <ng-container matColumnDef="action">
@@ -43,7 +43,7 @@
         <h1><span style="color:rgb(0, 255, 149)">online</span></h1>
         <mat-divider></mat-divider>
  
-        <table mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
+        <table cdkDropList (cdkDropListDropped)="dropOnlineFriends($event)" mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element; let i = index"> 
                     <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="onlineFriends.data[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
@@ -57,7 +57,7 @@
         <h1><span style="color:rgb(255, 0, 76)">offline</span></h1>
         <mat-divider></mat-divider>
 
-        <table mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
+        <table cdkDropList (cdkDropListDropped)="dropOfflineFriends($event)" mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element; let i = index"> 
                     <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="offlineFriends.data[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
