--- a/angular-client/src/app/components/babylonjs/babylonjs.component.html
+++ b/angular-client/src/app/components/babylonjs/babylonjs.component.html
@@ -58,7 +58,7 @@
         <br> 
         <mat-divider></mat-divider>
         <span id="swap" class="material-icons">swap_horiz</span>
-        Swap Weapon: <strong id="strong">F</strong>
+        Swap Weapon: <strong id="strong">Q</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="pickup" class="material-icons">swap_vert</span>
