--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
@@ -42,3 +42,27 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
 .profile-icon {
   padding-bottom: 5px;
 }
+
+.mat-expansion-panel {
+  background-color: #212529;
+  color: aliceblue;
+}
+
+.mat-expansion-panel-header {
+  padding: 0px;
+  padding-right: 7px;
+}
+
+.mat-expansion-panel-header-description {
+  flex-grow: 0;
+  color: rgb(204, 33, 33)
+}
+
+::ng-deep .mat-expansion-panel-body {
+  padding: 0px !important;
+  padding-bottom: 7px !important;
+}
+
+::ng-deep .mat-expansion-indicator:after {
+  color: rgba(255,255,255,.5);
+}
