--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -19,74 +19,84 @@
               <input matInput (keyup)="filter($event)" name="filter">
             </mat-form-field>
         </form>  
-        
-        <h1><span style="color:rgb(0, 162, 255)">friend requests</span></h1>
-        <mat-divider></mat-divider>
- 
-        <table mat-table [dataSource]="inboundFriendRequests" class="mat-elevation-z0">
+        <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>        
+                    <h1><span style="color:rgb(0, 162, 255)">friend requests</span></h1>
+                </mat-panel-title>   
+            </mat-expansion-panel-header>
+            <table mat-table [dataSource]="inboundFriendRequests" class="mat-elevation-z0">
 
-            <ng-container matColumnDef="username">
-                <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="action">
-                <td class="right-justify" mat-cell *matCellDef="let element">
-                    <span matTooltip="Reject Friend Request" (click)="rejectFriendRequest(element)" class="material-icons-outlined">person_remove</span>
-                    <span matTooltip="Accept Friend Request" (click)="acceptFriendRequest(element)" class="material-icons-outlined">person_add_alt</span>
-                </td>
-            </ng-container>
-            <tr mat-row *matRowDef="let row; columns: inboundFriendRequestsDisplayedColumns;"></tr>
-        </table>
-        <br>
-        <br>            
-
-        <h1><span style="color:rgb(0, 255, 149)">online</span></h1>
-        <mat-divider></mat-divider>
- 
-        <table cdkDropList (cdkDropListDropped)="dropOnlineFriends($event)" mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
-            <ng-container matColumnDef="username">
-                <td mat-cell *matCellDef="let element; let i = index"> 
-                    <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="onlineFriends.data[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
-                </td>
-            </ng-container>
-            <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
-        </table>
+                <ng-container matColumnDef="username">
+                    <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
+                </ng-container>
+    
+                <ng-container matColumnDef="action">
+                    <td class="right-justify" mat-cell *matCellDef="let element">
+                        <span matTooltip="Reject Friend Request" (click)="rejectFriendRequest(element)" class="material-icons-outlined">person_remove</span>
+                        <span matTooltip="Accept Friend Request" (click)="acceptFriendRequest(element)" class="material-icons-outlined">person_add_alt</span>
+                    </td>
+                </ng-container>
+                <tr mat-row *matRowDef="let row; columns: inboundFriendRequestsDisplayedColumns;"></tr>
+            </table>
+        </mat-expansion-panel>
         <br>
         <br>  
-
-        <h1><span style="color:rgb(255, 0, 76)">offline</span></h1>
-        <mat-divider></mat-divider>
-
-        <table cdkDropList (cdkDropListDropped)="dropOfflineFriends($event)" mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
-            <ng-container matColumnDef="username">
-                <td mat-cell *matCellDef="let element; let i = index"> 
-                    <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="offlineFriends.data[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
-                </td>
-            </ng-container>
-            <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
-          </table>
-          <br>
-          <br>  
-
-          <h1><span style="color:rgba(236, 232, 0, 0.884)">pending</span></h1>
-          <mat-divider></mat-divider>
-          
-          <table mat-table [dataSource]="outboundFriendRequests" class="mat-elevation-z0">
-
-            <ng-container matColumnDef="username">
-              <td mat-cell *matCellDef="let element"> {{element.to.username}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="action">
-                <td mat-cell *matCellDef="let element">
-                    <span matTooltip="Revoke Friend Request" (click)="revokeFriendRequest(element)" class="material-icons">close</span>
-                </td>
-            </ng-container>
-          
-            <tr mat-row *matRowDef="let row; columns: outboundFriendRequestsDisplayedColumns;"></tr>
-        </table>
+        <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>        
+                    <h1><span style="color:rgb(0, 255, 149)">online</span></h1>
+                </mat-panel-title>   
+            </mat-expansion-panel-header>
+            <table cdkDropList (cdkDropListDropped)="dropOnlineFriends($event)" mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
+                <ng-container matColumnDef="username">
+                    <td mat-cell *matCellDef="let element; let i = index"> 
+                        <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="onlineFriends.filteredData[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
+                    </td>
+                </ng-container>
+                <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
+              </table>
+        </mat-expansion-panel>
         <br>
+        <br>  
+        <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>        
+                    <h1><span style="color:rgb(255, 0, 76)">offline</span></h1>
+                </mat-panel-title>   
+            </mat-expansion-panel-header>
+            <table cdkDropList (cdkDropListDropped)="dropOfflineFriends($event)" mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
+                <ng-container matColumnDef="username">
+                    <td mat-cell *matCellDef="let element; let i = index"> 
+                        <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="offlineFriends.filteredData[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
+                    </td>
+                </ng-container>
+                <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
+              </table>
+        </mat-expansion-panel>
         <br>
+        <br>  
+        <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>        
+                    <h1><span style="color:rgba(236, 232, 0, 0.884)">pending</span></h1>
+                </mat-panel-title>   
+            </mat-expansion-panel-header>
+            <table mat-table [dataSource]="outboundFriendRequests" class="mat-elevation-z0">
+                <ng-container matColumnDef="username">
+                    <td mat-cell *matCellDef="let element"> {{element.to.username}} </td>
+                </ng-container>
+    
+                <ng-container matColumnDef="action">
+                    <td mat-cell *matCellDef="let element">
+                        <span matTooltip="Revoke Friend Request" (click)="revokeFriendRequest(element)" class="material-icons">close</span>
+                    </td>
+                </ng-container>
+                <tr mat-row *matRowDef="let row; columns: outboundFriendRequestsDisplayedColumns;"></tr>
+            </table>
+        </mat-expansion-panel>
+        <br>
+        <br>  
     </mat-drawer>
     <app-home></app-home>
 </mat-drawer-container>
