--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -42,38 +42,10 @@
         </mat-expansion-panel>
         <br>
         <br>  
-        <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
-            <mat-expansion-panel-header>
-                <mat-panel-title>        
-                    <h1><span style="color:rgb(0, 255, 149)">online</span></h1>
-                </mat-panel-title>   
-            </mat-expansion-panel-header>
-            <table cdkDropList (cdkDropListDropped)="dropOnlineFriends($event)" mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
-                <ng-container matColumnDef="username">
-                    <td mat-cell *matCellDef="let element; let i = index"> 
-                        <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="onlineFriends.filteredData[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
-                    </td>
-                </ng-container>
-                <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
-              </table>
-        </mat-expansion-panel>
+        <app-social-friends-list title="online" titleColor="color:rgb(0, 255, 149)" [(friends)]="onlineFriends" [potentialMessage]="potentialMessage"></app-social-friends-list>
         <br>
         <br>  
-        <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
-            <mat-expansion-panel-header>
-                <mat-panel-title>        
-                    <h1><span style="color:rgb(255, 0, 76)">offline</span></h1>
-                </mat-panel-title>   
-            </mat-expansion-panel-header>
-            <table cdkDropList (cdkDropListDropped)="dropOfflineFriends($event)" mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
-                <ng-container matColumnDef="username">
-                    <td mat-cell *matCellDef="let element; let i = index"> 
-                        <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="offlineFriends.filteredData[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
-                    </td>
-                </ng-container>
-                <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
-              </table>
-        </mat-expansion-panel>
+        <app-social-friends-list title="offline" titleColor="color:rgb(255, 0, 76)" [(friends)]="offlineFriends" [potentialMessage]="potentialMessage"></app-social-friends-list>
         <br>
         <br>  
         <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
