--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -2,10 +2,30 @@
     <mat-card class="home-card">
         <mat-card-header>
             <div mat-card-avatar class="home-header-image"></div>
-            <mat-card-title>Home</mat-card-title>
+            <mat-card-title>{{self.username}}, Start or Join a Match </mat-card-title>
             <mat-card-subtitle>Wanna play a qwicki?</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="/assets/chillin.png" alt="Wick logo">
+        <button mat-raised-button color="primary" (click)="createGame()">Start</button>
+        <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>        
+                    <h1><span>Available Games</span></h1>
+                </mat-panel-title>   
+            </mat-expansion-panel-header>
+            <table mat-table [dataSource]="availableGames" class="mat-elevation-z0">
+                <ng-container matColumnDef="name">
+                    <td mat-cell *matCellDef="let element"> 
+                        {{element.name}}
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-raised-button color="primary" (click)="joinGame(element)">Join</button>
+                    </td>
+                </ng-container>
+                <tr mat-row *matRowDef="let row; columns: availableGamesDisplayedColumns;"></tr>
+              </table>
+        </mat-expansion-panel>
         <mat-card-content>
         </mat-card-content>
         </mat-card>
