--- a/angular-client/src/app/components/home/home.component.css
+++ b/angular-client/src/app/components/home/home.component.css
@@ -30,3 +30,7 @@
     align-items: center;
     background-image: url('/assets/home.png');
 }
+
+::ng-deep .mat-tab-label {
+    color: aliceblue;
+}
