--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -8,29 +8,10 @@
         <mat-card-content>
             <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
                 <mat-tab label="Join">
-                    <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
-                        <mat-expansion-panel-header>
-                            <mat-panel-title>        
-                                <h1><span>Available Games</span></h1>
-                            </mat-panel-title>   
-                        </mat-expansion-panel-header>
-                        <table mat-table [dataSource]="availableGames" class="mat-elevation-z0">
-                            <ng-container matColumnDef="name">
-                                <td mat-cell *matCellDef="let element"> 
-                                    {{element.name}}
-                                </td>
-                            </ng-container>
-                            <ng-container matColumnDef="action">
-                                <td mat-cell *matCellDef="let element"> 
-                                    <button mat-raised-button color="primary" (click)="joinGame(element)">Join</button>
-                                </td>
-                            </ng-container>
-                            <tr mat-row *matRowDef="let row; columns: availableGamesDisplayedColumns;"></tr>
-                          </table>
-                    </mat-expansion-panel>
+                    <app-join-game></app-join-game>
                 </mat-tab>
                 <mat-tab label="Create">
-                    <button mat-raised-button color="primary" (click)="createGame()">Start</button>
+                    <app-create-game></app-create-game>
                 </mat-tab>
             </mat-tab-group>
         </mat-card-content>
