Nicer looking create/join game

--- a/angular-client/src/app/components/create-game/create-game.component.html
+++ b/angular-client/src/app/components/create-game/create-game.component.html
@@ -1,7 +1,8 @@
 <form class="create-game-form" (ngSubmit)="createGame()">
     <mat-form-field class="create-game-full-width">
       <mat-label>Name</mat-label>
-      <input matInput [(ngModel)]="game.name" name="name">
+      <input matInput [(ngModel)]="game.name" name="name" #input maxlength="40">
+      <mat-hint class="create-game-hint" align="end">{{input.value?.length || 0}}/40</mat-hint>
     </mat-form-field>
     <mat-form-field class="create-game-full-width">
       <mat-label>Mode</mat-label>
@@ -11,5 +12,5 @@
       <mat-label>Map</mat-label>
       <input matInput [(ngModel)]="game.map" name="map" [disabled]="true">
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Create</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="disableGameCreation()">Create</button>
 </form>
