--- a/angular-client/src/app/components/create-game/create-game.component.css
+++ b/angular-client/src/app/components/create-game/create-game.component.css
@@ -1,10 +1,13 @@
 .create-game-form {
     margin-top: 20px;
     min-width: 150px;
-    max-width: 500px;
     width: 100%;
 }
   
 .create-game-full-width {
     width: 100%;
+}
+
+.create-game-hint {
+    color: aliceblue;
 }
