--- a/angular-client/src/app/components/join-game/join-game.component.html
+++ b/angular-client/src/app/components/join-game/join-game.component.html
@@ -18,6 +18,16 @@
             <th mat-header-cell *matHeaderCellDef>Map</th>
             <td mat-cell *matCellDef="let element">{{element.metadata.map}}</td>
         </ng-container>
+
+        <ng-container matColumnDef="createdBy">
+            <th mat-header-cell *matHeaderCellDef>Created By</th>
+            <td mat-cell *matCellDef="let element">{{element.metadata.createdBy.username}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="createdAt">
+            <th mat-header-cell *matHeaderCellDef>Created At</th>
+            <td mat-cell *matCellDef="let element">{{element.metadata.createdAt | date : 'short'}}</td>
+        </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="joinGame(element)">Join</button></td>
