--- a/angular-client/src/app/components/join-game/join-game.component.html
+++ b/angular-client/src/app/components/join-game/join-game.component.html
@@ -26,7 +26,7 @@
 
         <ng-container matColumnDef="createdAt">
             <th mat-header-cell *matHeaderCellDef>Created At</th>
-            <td mat-cell *matCellDef="let element">{{element.metadata.createdAt | date : 'short'}}</td>
+            <td mat-cell *matCellDef="let element">{{element.metadata.createdAt | date : 'EE MMM dd yyyy, h:mm:ss a'}}</td>
         </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef></th>
