--- a/angular-client/src/app/components/join-game/join-game.component.html
+++ b/angular-client/src/app/components/join-game/join-game.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="gamesPresent(); else noGames" class="scrollable" #scrollable>
+<div *ngIf="gameRoomsPresent(); else noGames" class="scrollable" #scrollable>
     <form class="join-game-filter">
         <mat-form-field class="join-game-full-width">
           <mat-label>Search</mat-label>
           <input matInput (keyup)="filter($event)" name="filter">
         </mat-form-field>
     </form>     
-    <table mat-table [dataSource]="availableGames" class="mat-elevation-z0">
+    <table mat-table [dataSource]="availableGameRooms" class="mat-elevation-z0">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let element">{{element.metadata.name}}</td>
@@ -30,11 +30,11 @@
         </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="joinGame(element)">Join</button></td>
+            <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="joinGameRoom(element)">Join</button></td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="availableGamesDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: availableGamesDisplayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="availableGameRoomsDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: availableGameRoomsDisplayedColumns;"></tr>
     </table>
 </div>
 <ng-template #noGames>No games found. Try creating your own.</ng-template>
