--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -4,22 +4,24 @@
 }
 
 /* disabled text color for input */
-::ng-deep .mat-input-element:disabled, .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after {
-  color: aliceblue
+::ng-deep .mat-input-element:disabled,
+.mat-form-field-type-mat-native-select.mat-form-field-disabled
+  .mat-form-field-infix::after {
+  color: aliceblue;
 }
 /* Change label color on no focus */
 ::ng-deep .mat-form-field .mat-form-field-label {
-  color: rgba(255,255,255,.5)
+  color: rgba(255, 255, 255, 0.5);
 }
 
 /* Change label color on focused */
 ::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
-  color: #673ab7
+  color: #673ab7;
 }
-  
+
 /* underline border color on focused */
-::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
-  background-color: #673ab7
+::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple {
+  background-color: #673ab7;
 }
 
 /* All scrollbars will have this styling */
@@ -27,7 +29,7 @@
   width: 4px;
   height: 4px;
   overflow-y: scroll;
-  background: rgba(255,255,255,.5);
+  background: rgba(255, 255, 255, 0.5);
   box-shadow: inset 0 0 4px #707070;
 }
 
@@ -38,24 +40,25 @@
 }
 
 /* All icons apply these rules */
-::ng-deep .material-icons, .material-icons-outlined {
+::ng-deep .material-icons,
+.material-icons-outlined {
   vertical-align: middle;
-  color:#673ab7;
+  color: #673ab7;
 }
 
 /* All icons apply these rules */
-::ng-deep .material-icons:hover, .material-icons-outlined:hover {
+::ng-deep .material-icons:hover,
+.material-icons-outlined:hover {
   cursor: pointer;
 }
 
 /* All icons apply these rules */
 ::ng-deep .material-icons-outlined {
   vertical-align: middle;
-  color:#673ab7;
+  color: #673ab7;
 }
 
 /* All icons apply these rules */
 ::ng-deep .material-icons-outlined:hover {
   cursor: pointer;
 }
-
