--- a/angular-client/src/app/components/join-game/join-game.component.html
+++ b/angular-client/src/app/components/join-game/join-game.component.html
@@ -1,40 +1,55 @@
 <div *ngIf="gameRoomsPresent(); else noGames" class="scrollable" #scrollable>
-    <form class="join-game-filter">
-        <mat-form-field class="join-game-full-width">
-          <mat-label>Search</mat-label>
-          <input matInput (keyup)="filter($event)" name="filter">
-        </mat-form-field>
-    </form>     
-    <table mat-table [dataSource]="availableGameRooms" class="mat-elevation-z0">
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let element">{{element.metadata.name}}</td>
-        </ng-container>
-        <ng-container matColumnDef="mode">
-            <th mat-header-cell *matHeaderCellDef>Mode</th>
-            <td mat-cell *matCellDef="let element">{{element.metadata.mode}}</td>
-        </ng-container>
-        <ng-container matColumnDef="map">
-            <th mat-header-cell *matHeaderCellDef>Map</th>
-            <td mat-cell *matCellDef="let element">{{element.metadata.map}}</td>
-        </ng-container>
+  <form class="join-game-filter">
+    <mat-form-field class="join-game-full-width">
+      <mat-label>Search</mat-label>
+      <input matInput (keyup)="filter($event)" name="filter" />
+    </mat-form-field>
+  </form>
+  <table mat-table [dataSource]="availableGameRooms" class="mat-elevation-z0">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.metadata.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="mode">
+      <th mat-header-cell *matHeaderCellDef>Mode</th>
+      <td mat-cell *matCellDef="let element">{{ element.metadata.mode }}</td>
+    </ng-container>
+    <ng-container matColumnDef="map">
+      <th mat-header-cell *matHeaderCellDef>Map</th>
+      <td mat-cell *matCellDef="let element">{{ element.metadata.map }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="createdBy">
-            <th mat-header-cell *matHeaderCellDef>Created By</th>
-            <td mat-cell *matCellDef="let element">{{element.metadata.createdBy.username}}</td>
-        </ng-container>
+    <ng-container matColumnDef="createdBy">
+      <th mat-header-cell *matHeaderCellDef>Created By</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.metadata.createdBy.username }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="createdAt">
-            <th mat-header-cell *matHeaderCellDef>Created At</th>
-            <td mat-cell *matCellDef="let element">{{element.metadata.createdAt | date : 'EE MMM dd yyyy, h:mm:ss a'}}</td>
-        </ng-container>
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element"><button mat-raised-button color="primary" (click)="joinGameRoom(element)">Join</button></td>
-        </ng-container>
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef>Created At</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.metadata.createdAt | date: 'EE MMM dd yyyy, h:mm:ss a' }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="joinGameRoom(element)">
+          Join
+        </button>
+      </td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="availableGameRoomsDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: availableGameRoomsDisplayedColumns;"></tr>
-    </table>
+    <tr
+      mat-header-row
+      *matHeaderRowDef="availableGameRoomsDisplayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: availableGameRoomsDisplayedColumns"></tr>
+  </table>
 </div>
 <ng-template #noGames>No games found. Try creating your own.</ng-template>
