--- a/angular-client/src/app/components/login/login.component.html
+++ b/angular-client/src/app/components/login/login.component.html
@@ -1,20 +1,24 @@
-<div class='main-div'>
+<div class="main-div">
   <mat-card class="login-card">
     <mat-card-header>
       <div mat-card-avatar class="login-header-image"></div>
       <mat-card-title>Login</mat-card-title>
       <mat-card-subtitle>Wanna play a qwicki?</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="/assets/chillin.png" alt="Wick logo">
+    <img mat-card-image src="/assets/chillin.png" alt="Wick logo" />
     <mat-card-content>
       <form class="login-form" (ngSubmit)="login()">
         <mat-form-field class="login-full-width">
           <mat-label>username</mat-label>
-          <input matInput [(ngModel)]="credentials.username" name="username">
+          <input matInput [(ngModel)]="credentials.username" name="username" />
         </mat-form-field>
         <mat-form-field class="login-full-width">
           <mat-label>password</mat-label>
-          <input matInput [(ngModel)]="credentials.password" type="password" name="password">
+          <input
+            matInput
+            [(ngModel)]="credentials.password"
+            type="password"
+            name="password" />
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit">Login</button>
         or <a routerLink="/auth/signup">Sign Up</a>
