--- a/angular-client/src/app/components/signup/signup.component.css
+++ b/angular-client/src/app/components/signup/signup.component.css
@@ -1,33 +1,32 @@
 .signup-card {
-    max-width: 400px;
-    color: aliceblue;
-    background-color: #212529;
+  max-width: 400px;
+  color: aliceblue;
+  background-color: #212529;
 }
 
 .mat-card-subtitle {
-    color:rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .signup-header-image {
-    background-image: url('/assets/wick.png');
-    background-size: cover;
+  background-image: url('/assets/wick.png');
+  background-size: cover;
 }
 
 .signup-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
 }
-  
+
 .signup-full-width {
-    width: 100%;
+  width: 100%;
 }
 
-.main-div{
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url('/assets/home.png');
+.main-div {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('/assets/home.png');
 }
-
