--- a/angular-client/src/app/components/social-chat-box/social-chat-box.component.css
+++ b/angular-client/src/app/components/social-chat-box/social-chat-box.component.css
@@ -1,69 +1,72 @@
 /* social cell stuff */
 .hint {
-    color: aliceblue;
+  color: aliceblue;
 }
 
 .createdAt {
-    color: rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .input {
-    width: 100%;
+  width: 100%;
 }
 
 table {
-    width: 100%;
-    background-color: #212529;
+  width: 100%;
+  background-color: #212529;
 }
 
 .scrollable {
-    height: 270px;
-    max-width: 100%;
-    overflow: auto;
+  height: 270px;
+  max-width: 100%;
+  overflow: auto;
 }
-  
+
 .mat-cell {
-    color: aliceblue;
-    font-size: 13px;
-    border-bottom-style: none;
+  color: aliceblue;
+  font-size: 13px;
+  border-bottom-style: none;
 }
-  
+
 /* get rid of padding left for the table */
-th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, td.mat-cell:last-of-type {
-    padding-left: 0px;
-    padding-right: 0px;
+th.mat-header-cell:first-of-type,
+td.mat-cell:first-of-type,
+td.mat-footer-cell:first-of-type,
+td.mat-cell:last-of-type {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 textarea.mat-input-element {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .card {
-   max-width: 280px;
-   padding: 7px;
-   background: rgba(103, 58, 183, 0.3) /* Purple background with 30% opacity */
+  max-width: 280px;
+  padding: 7px;
+  background: rgba(103, 58, 183, 0.3); /* Purple background with 30% opacity */
 }
 
 .card-subtitle {
-    margin-bottom: 0;
-    color: rgba(255,255,255,.5);
+  margin-bottom: 0;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .card-content {
-    color: aliceblue;
-    margin-bottom: 5px;
+  color: aliceblue;
+  margin-bottom: 5px;
 }
 
 .small-font {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 .cell {
-    padding: 3px;
+  padding: 3px;
 }
 
 .old-message {
-    color: aliceblue;
-    font-size: 12px;
-    padding-left: 3px;
+  color: aliceblue;
+  font-size: 12px;
+  padding-left: 3px;
 }
