--- a/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
+++ b/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
@@ -1,29 +1,59 @@
-<form *ngIf="isInboundFriendRequestsComponent()" class="home-form" (ngSubmit)="sendFriendRequest()">
-    <mat-form-field class="home-full-width">
-      <mat-label>Send Friend Request</mat-label>
-      <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest">
-    </mat-form-field>
-</form>  
+<form
+  *ngIf="isInboundFriendRequestsComponent()"
+  class="home-form"
+  (ngSubmit)="sendFriendRequest()">
+  <mat-form-field class="home-full-width">
+    <mat-label>Send Friend Request</mat-label>
+    <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest" />
+  </mat-form-field>
+</form>
 
 <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
-    <mat-expansion-panel-header>
-        <mat-panel-title>        
-            <h1><span [style]="titleColor">{{title}}</span></h1>
-        </mat-panel-title>   
-    </mat-expansion-panel-header>
-    <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      <h1>
+        <span [style]="titleColor">{{ title }}</span>
+      </h1>
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+  <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
+    <ng-container matColumnDef="username">
+      <td mat-cell *matCellDef="let element">
+        {{
+          isInboundFriendRequestsComponent()
+            ? element.from.username
+            : element.to.username
+        }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="username">
-            <td mat-cell *matCellDef="let element"> {{isInboundFriendRequestsComponent() ? element.from.username : element.to.username}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="action">
-            <td class="right-justify" mat-cell *matCellDef="let element">
-                <span *ngIf="isInboundFriendRequestsComponent()" matTooltip="Reject Friend Request" (click)="rejectFriendRequest(element)" class="material-icons-outlined">person_remove</span>
-                <span *ngIf="isInboundFriendRequestsComponent()" matTooltip="Accept Friend Request" (click)="acceptFriendRequest(element)" class="material-icons-outlined">person_add_alt</span>
-                <span *ngIf="!isInboundFriendRequestsComponent()" matTooltip="Revoke Friend Request" (click)="revokeFriendRequest(element)" class="material-icons">close</span>
-            </td>
-        </ng-container>
-        <tr mat-row *matRowDef="let row; columns: friendRequestsDisplayedColumns;"></tr>
-    </table>
+    <ng-container matColumnDef="action">
+      <td class="right-justify" mat-cell *matCellDef="let element">
+        <span
+          *ngIf="isInboundFriendRequestsComponent()"
+          matTooltip="Reject Friend Request"
+          (click)="rejectFriendRequest(element)"
+          class="material-icons-outlined"
+          >person_remove</span
+        >
+        <span
+          *ngIf="isInboundFriendRequestsComponent()"
+          matTooltip="Accept Friend Request"
+          (click)="acceptFriendRequest(element)"
+          class="material-icons-outlined"
+          >person_add_alt</span
+        >
+        <span
+          *ngIf="!isInboundFriendRequestsComponent()"
+          matTooltip="Revoke Friend Request"
+          (click)="revokeFriendRequest(element)"
+          class="material-icons"
+          >close</span
+        >
+      </td>
+    </ng-container>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: friendRequestsDisplayedColumns"></tr>
+  </table>
 </mat-expansion-panel>
