--- a/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
+++ b/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
@@ -1,15 +1,25 @@
 <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
-    <mat-expansion-panel-header>
-        <mat-panel-title>        
-            <h1><span [style]="titleColor">{{title}}</span></h1>
-        </mat-panel-title>   
-    </mat-expansion-panel-header>
-    <table cdkDropList (cdkDropListDropped)="dropFriends($event)" mat-table [dataSource]="friends" class="mat-elevation-z0">
-        <ng-container matColumnDef="username">
-            <td mat-cell *matCellDef="let element; let i = index"> 
-                <app-social-cell [potentialMessage]="potentialMessage" [(friend)]="friends.filteredData[i]" (onRemoveFriend)="removeFriend(element)"></app-social-cell>
-            </td>
-        </ng-container>
-        <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
-      </table>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      <h1>
+        <span [style]="titleColor">{{ title }}</span>
+      </h1>
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+  <table
+    cdkDropList
+    (cdkDropListDropped)="dropFriends($event)"
+    mat-table
+    [dataSource]="friends"
+    class="mat-elevation-z0">
+    <ng-container matColumnDef="username">
+      <td mat-cell *matCellDef="let element; let i = index">
+        <app-social-cell
+          [potentialMessage]="potentialMessage"
+          [(friend)]="friends.filteredData[i]"
+          (removeFriend)="onRemoveFriend(element)"></app-social-cell>
+      </td>
+    </ng-container>
+    <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns"></tr>
+  </table>
 </mat-expansion-panel>
