Working tab for social sidenav

--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -6,7 +6,10 @@
       <mat-card-subtitle>Wanna play a qwicki?</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
+      <mat-tab-group
+        class="home-tab-group"
+        mat-stretch-tabs="false"
+        mat-align-tabs="center">
         <mat-tab label="Join">
           <app-join-game></app-join-game>
         </mat-tab>
