--- a/angular-client/src/app/components/home/home.component.css
+++ b/angular-client/src/app/components/home/home.component.css
@@ -34,6 +34,6 @@
   background-image: url('/assets/home.png');
 }
 
-::ng-deep .mat-tab-label {
+.home-tab-group ::ng-deep .mat-tab-label {
   color: aliceblue;
 }
